update Changes and meta for release

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Dancer-Session-Cookie
 
 {{$NEXT}}
 
+    - Fix bug where session wasn't cleared correctly if route handler
+      died while processing a request
+
 0.19      2013-02-24 22:49:14 America/New_York
 
     - Fix bug with session_expires always expiring a cookie early
