--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for Dancer-Session-Cookie
 
 {{$NEXT}}
 
+    [CHANGED]
+
+    - Requires Session::Storage::Secure 0.007 for improved resistance
+      to timing attacks
+
 0.21      2013-05-08 22:33:10 America/New_York
 
     - Require Dancer 1.3113 and use its new features to fix more bugs
