--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for Dancer-Session-Cookie
 
 {{$NEXT}}
 
+    [CHANGED]
+
+    - Requires Session::Storage::Secure 0.010 to allow storing objects,
+      which is specially relevant for JSON::bool data.
+
 0.22      2013-05-31 23:38:07 America/New_York
 
     [CHANGED]
