--- a/Changes
+++ b/Changes
@@ -9,7 +9,9 @@ Revision history for Dancer-Session-Cookie
 
  [ENHANCEMENTS]
 
- [NEW FEATURES]
+ [MISC]
+
+ - Release again, this time with real co-maint permissions.
 
  [STATISTICS]
 
