--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@ Revision history for Dancer-Session-Cookie
 
  [DOCUMENTATION]
  - Document the 'session_expires' setting.
+ - Warn about maximal cookie size. (GH#2 David Precious)
 
  [ENHANCEMENTS]
 
