--- a/Changes
+++ b/Changes
@@ -1,8 +1,6 @@
 Revision history for Dancer-Session-Cookie
 
 {{$NEXT}}
-    - Remode  'README.pod' from distribution. [GH#6]
-
   [ API CHANGES ]
 
   [ BUG FIXES ]
@@ -14,6 +12,12 @@ Revision history for Dancer-Session-Cookie
   [ NEW FEATURES ]
 
   [ STATISTICS ]
+
+0.27 2015-09-23
+  - Remode  'README.pod' from distribution. [GH#6]
+
+  [ STATISTICS ]
+    - code churn: 4 files changed, 62 insertions(+), 126 deletions(-)
 
 0.26 2015-09-10
   - Switch Test::WWW::Mechanize::PSGI for raw HTTP::Request/Response.
@@ -86,7 +90,7 @@ Revision history for Dancer-Session-Cookie
     - Fix for Dancer > v1.3012 
     - Add support for session_secure to serve https only cookies. 
     - Add missing MYMETA.yml 
-    - Make Dancer::Session::Cookie honor the session_name setting	 
+    - Make Dancer::Session::Cookie honor the session_name setting      
       added to Dancer::Session::Abstract
     - Add session_cookie_path to control the path of the cookie.
 
