--- a/Changes
+++ b/Changes
@@ -4,16 +4,24 @@ Revision history for Dancer-Session-Cookie
   [ API CHANGES ]
 
   [ BUG FIXES ]
-  - Tests require Plack::Test v1.0029+. [GH#8, Mohammad S Anwar]
 
   [ DOCUMENTATION ]
-  - Improve English flow of the POD. [GH#9, Paul Cochrane]
 
   [ ENHANCEMENTS ]
 
   [ NEW FEATURES ]
 
   [ STATISTICS ]
+
+0.28 2018-02-10
+  [ BUG FIXES ]
+    - Tests require Plack::Test v1.0029+. [GH#8, Mohammad S Anwar]
+
+  [ DOCUMENTATION ]
+    - Improve English flow of the POD. [GH#9, Paul Cochrane]
+
+  [ STATISTICS ]
+    - code churn: 10 files changed, 105 insertions(+), 48 deletions(-)
 
 0.27 2015-09-23
   - Remode  'README.pod' from distribution. [GH#6]
