--- a/Changes
+++ b/Changes
@@ -11,6 +11,9 @@ Revision history for Dancer-Session-Cookie
 
   [ NEW FEATURES ]
 
+  [ MISC ]
+  - Added appveyor integration for Windows CI. [GH#11, Paul Cochrane]
+
   [ STATISTICS ]
 
 0.28 2018-02-10
