--- a/Changes
+++ b/Changes
@@ -14,6 +14,7 @@ Revision history for Dancer-Session-Cookie
   [ MISC ]
   - Added appveyor integration for Windows CI. [GH#11, Paul Cochrane]
   - Set minimal Perl version to be 5.8. [GH#10, Paul Cochrane]
+  - Remove trailing whitespaces. [GH#14, Paul Cochrane]
 
   [ STATISTICS ]
 
