--- a/Changes
+++ b/Changes
@@ -1,22 +1,13 @@
 Revision history for Dancer-Session-Cookie
 
-{{$NEXT}}
-  [ API CHANGES ]
-
-  [ BUG FIXES ]
-
-  [ DOCUMENTATION ]
-
-  [ ENHANCEMENTS ]
-
-  [ NEW FEATURES ]
-
+0.29 2018-02-17
   [ MISC ]
-  - Added appveyor integration for Windows CI. [GH#11, Paul Cochrane]
-  - Set minimal Perl version to be 5.8. [GH#10, Paul Cochrane]
-  - Misc code cleanup. [GH#14, GH#15, GH#16, GH#17, Paul Cochrane]
+    - Added appveyor integration for Windows CI. [GH#11, Paul Cochrane]
+    - Set minimal Perl version to be 5.8. [GH#10, Paul Cochrane]
+    - Misc code cleanup. [GH#14, GH#15, GH#16, GH#17, Paul Cochrane]
 
   [ STATISTICS ]
+    - code churn: 11 files changed, 62 insertions(+), 20 deletions(-)
 
 0.28 2018-02-10
   [ BUG FIXES ]
@@ -105,8 +96,8 @@ Revision history for Dancer-Session-Cookie
     - Fix for Dancer > v1.3012
     - Add support for session_secure to serve https only cookies.
     - Add missing MYMETA.yml
-    - Make Dancer::Session::Cookie honor the session_name setting
-      added to Dancer::Session::Abstract
+    - Make Dancer::Session::Cookie honor the session_name setting added to
+      Dancer::Session::Abstract
     - Add session_cookie_path to control the path of the cookie.
 
 0.13 2010-11-28T17:19:58Z
