--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ Revision history for Dancer-Session-Cookie
   [ DOCUMENTATION ]
 
   [ ENHANCEMENTS ]
+  - add a CONTRIBUTING file [GH#18, Paul Cochrane]
 
   [ NEW FEATURES ]
 
