--- a/Changes
+++ b/Changes
@@ -8,12 +8,18 @@ Revision history for Dancer-Session-Cookie
   [ DOCUMENTATION ]
 
   [ ENHANCEMENTS ]
-  - add a CONTRIBUTING file [GH#18, Paul Cochrane]
-  - minor refactoring, bump minor Perl version to 5.10.0.
 
   [ NEW FEATURES ]
 
   [ STATISTICS ]
+
+0.30 2018-03-11
+  [ ENHANCEMENTS ]
+    - add a CONTRIBUTING file [GH#18, Paul Cochrane]
+    - minor refactoring, bump minor Perl version to 5.10.0.
+
+  [ STATISTICS ]
+    - code churn: 5 files changed, 127 insertions(+), 26 deletions(-)
 
 0.29 2018-02-19
   [ MISC ]
